# Algorithms_and_Data_Structures

binary_tree/: CMakeLists.txt
binary_tree/inc/: binarytree.h
binary_tree/src/: binarytree.c  main.c
hash_table/: CMakeLists.txt
hash_table/inc/: _hash_table.h  prime_number.h
hash_table/src/: _hash_table.c  main.c  prime_number.c
linked_list/: CMakeLists.txt
linked_list/inc/: linkedlist.h
linked_list/src/: linkedlist.c  main.c
